--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "firebase-admin": "^13.5.0",
-    "mongodb": "^6.20.0"
+    "mongodb": "^6.20.0",
+    "stripe": "^18.0.0"
   }
 }
